# QtLog

./: CMakeLists.txt  Log.pro  README.md  log.cpp  log.h  log_global.h
